sm/sm-b2b-connector/main/default/objects/B2B_User_Login_Configuration__mdt/B2B_User_Login_Configuration__mdt.object-meta.xml
<CustomObject>
    <label>B2B User Login Configuration</label>
    <pluralLabel>B2B User Login Configurations</pluralLabel>
</CustomObject>