sm/sm-b2b-connector/main/default/objects/B2B_User_Login_Configuration__mdt/fields/Certificate_Name__c.field-meta.xml
<CustomField>
    <fullName>Certificate_Name__c</fullName>
    <label>Certificate Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>