sm/sm-b2b-connector/main/default/objects/B2B_User_Login_Configuration__mdt/fields/Organisation_Id__c.field-meta.xml
<CustomField>
    <fullName>Organisation_Id__c</fullName>
    <label>Organisation Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>