sm/sm-b2b-connector/main/default/objects/B2B_User_Login_Configuration__mdt/fields/Salesforce_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>Salesforce_Base_URL__c</fullName>
    <label>Salesforce Base URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>