sm/sm-b2b-connector/main/default/objects/B2B_User_Login_Configuration__mdt/fields/WebstoreId__c.field-meta.xml
<CustomField>
    <fullName>WebstoreId__c</fullName>
    <label>WebstoreId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>